Changed names from et to ic

--- a/sell/src/main/res/layout/price_output_fragment.xml
+++ b/sell/src/main/res/layout/price_output_fragment.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <kg.nurtelecom.ofd.sell.InfoCardCellView
-        android:id="@+id/product_price_et"
+        android:id="@+id/product_price_ic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,13 +26,13 @@
         app:layout_constraintTop_toBottomOf="@id/position_tv" />
 
     <kg.nurtelecom.ofd.sell.InfoCardCellView
-        android:id="@+id/product_count_et"
+        android:id="@+id/product_count_ic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@id/product_price_et"
-        app:layout_constraintStart_toStartOf="@id/product_price_et"
-        app:layout_constraintTop_toBottomOf="@id/product_price_et" />
+        app:layout_constraintEnd_toEndOf="@id/product_price_ic"
+        app:layout_constraintStart_toStartOf="@id/product_price_ic"
+        app:layout_constraintTop_toBottomOf="@id/product_price_ic" />
 
     <LinearLayout
         android:id="@+id/group_buttons"
@@ -42,26 +42,26 @@
         android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/product_count_et">
+        app:layout_constraintTop_toBottomOf="@id/product_count_ic">
 
         <kg.nurtelecom.ofd.sell.InfoCardCellView
-            android:id="@+id/product_discount_et"
+            android:id="@+id/product_discount_ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
-            app:layout_constraintEnd_toStartOf="@+id/product_discount_et"
-            app:layout_constraintStart_toStartOf="@id/product_count_et"
-            app:layout_constraintTop_toBottomOf="@id/product_count_et" />
+            app:layout_constraintEnd_toStartOf="@+id/product_discount_ic"
+            app:layout_constraintStart_toStartOf="@id/product_count_ic"
+            app:layout_constraintTop_toBottomOf="@id/product_count_ic" />
 
         <kg.nurtelecom.ofd.sell.InfoCardCellView
-            android:id="@+id/product_allowance_et"
+            android:id="@+id/product_allowance_ic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/product_count_et" />
+            app:layout_constraintTop_toBottomOf="@id/product_count_ic" />
 
     </LinearLayout>
 
