--- a/ui/src/main/res/layout/input_text_field.xml
+++ b/ui/src/main/res/layout/input_text_field.xml
@@ -38,7 +38,8 @@
             android:src="@drawable/ic_baseline_visibility_off"
             android:layout_gravity="center_vertical|right"
             android:clickable="true"
-            android:focusable="true" />
+            android:focusable="true"
+            android:visibility="gone"/>
 
     </com.google.android.material.card.MaterialCardView>
 
