--- a/app/src/main/res/layout/fragment_about_app.xml
+++ b/app/src/main/res/layout/fragment_about_app.xml
@@ -5,34 +5,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBlack">
     <ImageView
-        android:id="@+id/logo_main"
+        android:id="@+id/iv_logo_main"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="@dimen/margin_32dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tv_app_name"
         android:text="@string/text_app_name"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/app_text_normal"
-        app:layout_constraintTop_toBottomOf="@id/logo_main"
-        app:layout_constraintStart_toStartOf="@id/app_version"
-        app:layout_constraintEnd_toEndOf="@id/app_version"
+        style="@style/BaseTextStyle"
+        app:layout_constraintTop_toBottomOf="@id/iv_logo_main"
+        app:layout_constraintStart_toStartOf="@id/tv_app_version"
+        app:layout_constraintEnd_toEndOf="@id/tv_app_version"
         android:layout_marginTop="@dimen/app_margin"/>
     <TextView
-        android:id="@+id/app_version"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/tv_app_version"
+        style="@style/BaseTextStyle"
         android:text="@string/text_app_version"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/app_text_normal"
-        app:layout_constraintTop_toBottomOf="@id/app_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="@dimen/app_margin"/>
