--- a/ui/src/main/res/values/dimens.xml
+++ b/ui/src/main/res/values/dimens.xml
@@ -43,12 +43,13 @@
     <dimen name="margin_4dp">4dp</dimen>
     <dimen name="margin_0dp">0dp</dimen>
 
+    <dimen name="padding_32dp">32dp</dimen>
     <dimen name="padding_16dp">16dp</dimen>
     <dimen name="padding_14dp">14dp</dimen>
     <dimen name="padding_8dp">8dp</dimen>
     <dimen name="padding_5dp">5dp</dimen>
     <dimen name="padding_0dp">0dp</dimen>
-    
+
     <dimen name="height_75dp">75dp</dimen>
 
 </resources>
