--- a/ui/src/main/res/layout/product_cell_view.xml
+++ b/ui/src/main/res/layout/product_cell_view.xml
@@ -10,12 +10,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/cb_productCellView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         android:visibility="gone"
         android:buttonTint="@color/colorPink"
-        tools:checked="false"/>
+        android:minWidth="@dimen/width_18dp"
+        android:minHeight="@dimen/height_18dp"
+        tools:checked="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <ImageView
         android:clickable="true"
