--- a/sell/src/main/res/layout/side_menu_sell_main.xml
+++ b/sell/src/main/res/layout/side_menu_sell_main.xml
@@ -67,13 +67,13 @@
         app:subTitle="@string/text_interim_report"
         app:showArrowIcon="true" />
     <kg.nurtelecom.ofd.ui.CellView
-        android:id="@+id/sell_main_menu_item_story"
+        android:id="@+id/sell_main_menu_item_history"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/margin_16dp"
         android:layout_marginRight="@dimen/margin_16dp"
-        app:title="@string/text_story"
-        app:subTitle="@string/text_story_list"
+        app:title="@string/text_history"
+        app:subTitle="@string/text_history_list"
         app:showArrowIcon="true" />
     <kg.nurtelecom.ofd.ui.CellView
         android:id="@+id/sell_main_menu_item_information"
