--- a/ui/src/main/res/layout/detail_view.xml
+++ b/ui/src/main/res/layout/detail_view.xml
@@ -25,7 +25,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/iv_detail_icon_check_circle"
+                android:id="@+id/iv_detail_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_4dp"
@@ -34,38 +34,38 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_title_detail_sale_type"
+                android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_32dp"
                 android:text="@string/text_sale_type"
                 style="@style/HistoryItemTitleTextStyle"
-                app:layout_constraintLeft_toRightOf="@id/iv_detail_icon_check_circle"
-                app:layout_constraintStart_toStartOf="@id/iv_detail_icon_check_circle"
+                app:layout_constraintLeft_toRightOf="@id/iv_detail_icon"
+                app:layout_constraintStart_toStartOf="@id/iv_detail_icon"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_detail_counter"
+                android:id="@+id/tv_counter"
                 style="@style/HistoryItemSecondaryTextStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_36dp"
                 android:text="@string/text_counter"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_title_detail_sale_type" />
+                app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
             <TextView
-                android:id="@+id/tv_detail_timestamp"
+                android:id="@+id/tv_timestamp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/margin_36dp"
                 android:text="@string/text_timestamp"
                 style="@style/HistoryItemSecondaryTextStyle"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tv_detail_counter" />
+                app:layout_constraintTop_toBottomOf="@id/tv_counter" />
 
             <TextView
-                android:id="@+id/tv_detail_amount"
+                android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="@dimen/margin_16dp"
