--- a/ui/src/main/res/layout/main_toolbar.xml
+++ b/ui/src/main/res/layout/main_toolbar.xml
@@ -1,19 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
-    android:background="@color/colorBlack">
-    <TextView
-        android:id="@+id/tb_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/roboto"
-        android:gravity="start|center_vertical"
-        android:text="@string/main_greeting"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/text_20sp" />
-
-</androidx.appcompat.widget.Toolbar>
+    android:layout_height="?attr/actionBarSize"
+    style="@style/ToolbarStyle"
+    tools:layout_height="55dp"
+    tools:title="temp" />
