--- a/ui/src/main/res/values/styles.xml
+++ b/ui/src/main/res/values/styles.xml
@@ -109,6 +109,17 @@
         <item name="android:textColor">@color/textWhite</item>
     </style>
 
+    <style name="ToolbarTextAppearance" parent="BaseTextAppearance">
+        <item name="android:textSize">@dimen/text_20sp</item>
+    </style>
+
+    <style name="ToolbarStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="background">@color/black</item>
+        <item name="android:background">@color/black</item>
+        <item name="titleTextColor">@color/textWhite</item>
+        <item name="titleTextAppearance">@style/ToolbarTextAppearance</item>
+    </style>
+
     <style name="BaseTextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -192,9 +203,6 @@
         <item name="android:textColor">@color/grey</item>
     </style>
 
-    <style name="ToolbarTextStyle" parent="BaseTextStyle">
-        <item name="android:textSize">@dimen/text_20sp</item>
-    </style>
 
     <style name="CellViewStyle">
         <item name="android:gravity">center_vertical</item>
