--- a/sell/src/main/res/layout/activity_sell_main.xml
+++ b/sell/src/main/res/layout/activity_sell_main.xml
@@ -33,6 +33,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <androidx.cardview.widget.CardView
+        android:id="@+id/non_fiscal_cv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardBackgroundColor="#4A90E2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_8dp"
+            android:layout_marginEnd="@dimen/margin_8dp"
+            android:layout_marginBottom="@dimen/margin_8dp"
+            android:padding="8dp"
+            tools:text="@string/non_fiscal_mode_message"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/text_16sp"
+            app:drawableStartCompat="@drawable/ic_alert_triangle" />
+
+    </androidx.cardview.widget.CardView>
+
         <com.google.android.material.navigation.NavigationView
             android:clickable="false"
             android:focusable="false"
