--- a/sell/src/main/res/layout/dialog_view.xml
+++ b/sell/src/main/res/layout/dialog_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -14,29 +15,30 @@
         android:layout_marginTop="21dp"
         android:textColor="#DE000000"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Фискальный режим" />
 
     <TextView
         android:id="@+id/regime_message"
         android:layout_width="0dp"
-        android:text="Это основной режим осуществления торговой деятельности. Все данные отправляются в ОФД."
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="12dp"
         android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/regime_tv" />
+        app:layout_constraintTop_toBottomOf="@id/regime_tv"
+        tools:text="Это основной режим осуществления торговой деятельности. Все данные отправляются в ОФД." />
 
     <TextView
         android:id="@+id/regime_ok_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@android:string/ok"
-        android:textColor="#009688"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="16dp"
+        android:text="@android:string/ok"
+        android:textColor="#009688"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/regime_message" />
