--- a/user/src/main/res/layout/fragment_user.xml
+++ b/user/src/main/res/layout/fragment_user.xml
@@ -37,11 +37,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/main_toolbar"
         app:layout_constraintEnd_toEndOf="parent">
+
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/main_surname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/text_input_field"
+            android:background="@color/colorBlue"
             android:layout_marginBottom="@dimen/app_margin">
 
             <EditText
@@ -50,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Фамилия"
-                android:background="@null"
+                android:background="@color/colorGreen"
                 android:textColor="@color/colorWhite"
                 android:textSize="@dimen/app_text_large"
                 android:textColorHint="@color/colorGrey"
@@ -77,7 +78,6 @@
                 android:textColorHint="@color/colorGrey"
                 android:gravity="center_horizontal|top"/>
 
-
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
@@ -98,7 +98,6 @@
                 android:textSize="@dimen/app_text_large"
                 android:textColorHint="@color/colorGrey"
                 android:gravity="center_horizontal|top"/>
-
 
         </com.google.android.material.card.MaterialCardView>
 
@@ -138,20 +137,25 @@
                 android:layout_height="wrap_content"
                 android:hint="ИНН"
                 android:background="@null"
-                android:textColor="@color/colorWhite"
                 android:textSize="@dimen/app_text_large"
                 android:textColorHint="@color/colorGrey"
                 android:gravity="center_horizontal|top"/>
 
-
-
-
         </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/et_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/text_input_field"
+            android:layout_marginBottom="@dimen/app_margin">
 
         <kg.nurtelecom.ofd.ui.edittext.InputTextField
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/test_password"/>
+            android:id="@+id/test_password" />
+
+        </com.google.android.material.card.MaterialCardView>
 
     </LinearLayout>
 
