--- a/ui/src/main/res/layout/input_text_field.xml
+++ b/ui/src/main/res/layout/input_text_field.xml
@@ -15,9 +15,9 @@
         android:paddingBottom="@dimen/margin_8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:passwordToggleDrawable="@drawable/show_password_selector"
         app:passwordToggleEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -30,9 +30,7 @@
             android:inputType="textPassword"
             android:textColor="@color/colorGrey"
             android:textColorHint="@color/colorGrey"
-            android:textSize="@dimen/app_text_large"
-            app:passwordToggleDrawable="@drawable/show_password_selector"
-            app:passwordToggleEnabled="true" />
+            android:textSize="@dimen/app_text_large" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
