--- a/user/src/main/res/layout/fragment_user.xml
+++ b/user/src/main/res/layout/fragment_user.xml
@@ -149,8 +149,7 @@
         <kg.nurtelecom.ofd.ui.edittext.InputTextField
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/test_password"
-            android:background="@color/black"/>
+            android:id="@+id/test_password" />
 
     </LinearLayout>
 
