created RegEx validateOfTheIdentificationNumber ()

--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -167,5 +167,5 @@
         android:textColor="@color/white"
         android:textSize="@dimen/text_20sp">
 
-    </Button>
+    </com.google.android.material.button.MaterialButton>
 </androidx.constraintlayout.widget.ConstraintLayout>
