--- a/user/src/main/res/layout/activity_user.xml
+++ b/user/src/main/res/layout/activity_user.xml
@@ -79,7 +79,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/main_lastname"
+            android:id="@+id/main_middlename"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_16dp">
